--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "portfolio",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://nazar-melnychenko.github.io/Portfolio/build",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
@@ -11,10 +10,12 @@
     "google-map-react": "^1.1.6",
     "isotope-cells-by-row": "^1.1.4",
     "isotope-layout": "^3.0.6",
+    "lodash": "^4.17.15",
     "node-sass": "^4.13.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-google-maps": "^9.4.5",
+    "react-lodash": "^0.1.2",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.1",
